<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="UnusedResources">
    <string name="app_name" translatable="false">Cryptool</string>
    <string name="app_slogan">Cryptography for humans</string>
    <string name="dialog_create">Create</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="snackbar_retry">Retry</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="more_options_icon_description">More options</string>
    <string name="shortcut_title">Cryptool Overlay</string>
    <string name="shortcut_description">Open Cryptool in overlay mode</string>
    <string name="unexpected_error">Unexpected error, please report the problem if any</string>
    <string name="service_permission_error">The overlay mode can\'t start because it doesn\'t have permission</string>
    <string name="service_unexpected_error">There was an error when opening the overlay mode, please report the error</string>
    <string name="input_minimum_length">Minimum length is %1$d</string>
    <string name="version_19_name" translatable="false">3.1.1</string>
    <string name="version_19_description">• New main menu option to enable/disable biometric access.
                                       \n• Fix biometric access. You may have to enable it again.</string>
    <string name="version_18_name" translatable="false">3.1.0</string>
    <string name="version_18_description">• Support other apps sharing data with Cryptool.
                                       \n• Implement user feedback.
                                       \n• Fix stability issues.</string>
    <string name="version_15_name" translatable="false">3.0.1</string>
    <string name="version_15_description">• New message source: Local Area Network (LAN).
                                       \n• Fix stability issues on some Android versions.</string>
    <string name="version_10_name" translatable="false">3.0.0</string>
    <string name="version_10_description">• New modern user interface.
                                       \n• New cryptographic algorithms supported.
                                       \n• New message sources: Manual, SMS, and File.
                                       \n• Multiple encryption configurations as conversations.
                                       \n• Biometric identification support.
                                       \n• Improved export\/import feature.</string>
    <string name="version_4_name" translatable="false">2.1.1</string>
    <string name="version_4_description">• Fix clipboard cleaning error.
                                       \n• New languages support.</string>
    <string name="version_3_name" translatable="false">2.1.0</string>
    <string name="version_3_description">• Dark theme feature.
                                       \n• Forget Access PIN feature.
                                       \n• Change PIN feature.
                                       \n• Export and import feature.</string>
    <string name="version_2_name" translatable="false">2.0.0</string>
    <string name="version_2_description">• Keystore feature.
                                       \n• Access PIN feature.
                                       \n• Minor bug fixes.</string>
    <string name="version_1_name" translatable="false">1.0.0</string>
    <string name="version_1_description">• Hello, World!</string>
    <string name="welcome_main_description">This tool wants to help you to protect the information that matter most to you. We don\'t hide anything that\'s going on under the hood, we show the algorithms and data input\/output as it is.\n\nThis is a non-profit open source solution and we are not interested in your data. Anyway, we do not ask you to trust, we ask you to <b>block</b> the internet access, <b>review</b> the code, or even <b>build</b> the app yourself.\n\nIf you find any problem, have any suggestion, or want to collaborate, do not hesitate to contact us. We will be very grateful 🙂</string>
    <string name="welcome_changelog_title">What\’s New</string>
    <string name="welcome_tutorial_title">Tutorial</string>
    <string name="welcome_tutorial_message_1">Welcome to your first encrypted conversation</string>
    <string name="welcome_tutorial_message_2">Everything you write here is encrypted with the cryptographic configuration</string>
    <string name="welcome_tutorial_message_3">All the application data is encrypted and protected with your access code</string>
    <string name="welcome_tutorial_message_4">Even so, we recommend being especially careful with the clipboard and stopping the application when you no longer use it</string>
    <string name="gatekeeper_open_action">Open</string>
    <string name="gatekeeper_open_biometrics_icon_description">Use biometrics to open</string>
    <string name="gatekeeper_hide_icon_description">Hide code</string>
    <string name="gatekeeper_show_icon_description">Show code</string>
    <string name="gatekeeper_set_code_label">Set a code to control the access to the app</string>
    <string name="gatekeeper_enable_biometrics">Use biometrics to access:</string>
    <string name="gatekeeper_set_code_action">Set</string>
    <string name="gatekeeper_do_not_remember">I do not remember</string>
    <string name="gatekeeper_delete_code_dialog_title">Reset</string>
    <string name="gatekeeper_delete_code_dialog_description">You are about to delete all stored data and start again from the beginning. Do you want to continue?</string>
    <string name="gatekeeper_delete_code_dialog_action">Delete</string>
    <string name="gatekeeper_access_invalid_error">Access denied</string>
    <string name="gatekeeper_access_biometric_too_many_attempts_error">You have tried to access too many times without success and now you have to wait to use biometric access again</string>
    <string name="change_biometric_topbar_title">Change Biometric Access</string>
    <string name="change_access_topbar_title">Change Access Code</string>
    <string name="change_access_description">We need to reencrypt all your data to change the access code, we recommend that you have a backup exported beforehand. This process could take some seconds, please do not close the screen during that time.\n\nIf you use biometric access, you may be required to use it.\n</string>
    <string name="change_access_old_code_hint">Current access code</string>
    <string name="change_access_new_code_hint">New access code</string>
    <string name="change_access_change_action">Change</string>
    <string name="change_access_old_code_error">Invalid current access code</string>
    <string name="change_access_error">There was an unexpected error changing the code, please check that everything is fine, and try again</string>
    <string name="password_topbar_title">Passwords</string>
    <string name="password_empty_label">You don\'t have passwords</string>
    <string name="password_new_title">New Password</string>
    <string name="password_edit_title">Edit Password</string>
    <string name="password_hide_icon_description">Hide password</string>
    <string name="password_show_icon_description">Show password</string>
    <string name="password_random_icon_description">Generate a random password</string>
    <string name="password_name_hint">Name</string>
    <string name="password_password_hint">Password</string>
    <string name="password_tags_hint">Tags (separated by comma)</string>
    <string name="password_copy_icon_description">Copy password</string>
    <string name="password_delete_icon_description">Delete password</string>
    <string name="password_delete_dialog_title">Delete password</string>
    <string name="password_delete_dialog_description">You are about to delete this password. Do you want to continue?</string>
    <string name="password_delete_dialog_action">Delete</string>
    <string name="password_bottombar_create_icon_description">Create a new password</string>
    <string name="main_empty_label">You don\'t have encrypted conversations</string>
    <string name="main_encryption_favorite_icon_description">This encrypted conversation is favorite</string>
    <string name="main_set_favorites_icon_description">Set conversations as favorites</string>
    <string name="main_unset_favorites_icon_description">Set conversations as not favorites</string>
    <string name="main_delete_icon_description">Delete conversations</string>
    <string name="main_bottombar_finish_app_icon_description">Close application</string>
    <string name="main_bottombar_open_overlay_icon_description">Open overlay mode</string>
    <string name="main_bottombar_open_passwords_icon_description">Go to passwords</string>
    <string name="main_bottombar_clear_clipboard_icon_description">Clear clipboard</string>
    <string name="main_bottombar_create_icon_description">Create a new encrypted conversation</string>
    <string name="main_bottombar_open_full_icon_description">Open in full screen mode</string>
    <string name="main_open_overlay_permission_error">If you want to use the overlay mode, you have to grant the \'Display Over Other Apps\' permission.</string>
    <string name="main_open_overlay_permission_action">Settings</string>
    <string name="main_notify_new_github_version">There is a new version of Cryptool available on GitHub</string>
    <string name="main_notify_new_github_version_download">Download</string>
    <string name="algorithms_topbar_title">Encryption algorithms</string>
    <string name="algorithms_see_source_code_action">See the source code</string>
    <string name="algorithms_introduction">Learn more about how the encryption algorithms works. Cryptool uses common encryption algorithms, so we will refer to the official documentation of each one. We want to increase the number of algorithms available so you can use whatever you want.</string>
    <string name="algorithms_v1_description">• Advanced Encryption Standard (AES) specification.\n• Cipher-block chaining (CBC) mode.\n• Password-Based Key Derivation Function 2 (PBKDF2).\n• Base64 binary-to-text encoding schemes.\n\n⚠️This cryptographic configuration provides low security because the password derivation code has some issues.\n\nIt is difficult (not impossible) to use this configuration in other tools because of the very specific password derivation configuration and the salt computation.</string>
    <string name="algorithms_v2_description">• Advanced Encryption Standard (AES) 256 specification.\n• Galois/Counter Mode (GCM) mode.\n• Argon2 Key Derivation Function.\n• Base64 binary-to-text encoding schemes.\n\nYou can use this configuration in other tools very easily, for this you only need to know how to identify each part of the text:</string>
    <string name="algorithms_v2_components" translatable="false">saltBase64.ivBase64.tLen.encryptedTextBase64</string>
    <string name="main_export_dialog_title">Export data</string>
    <string name="main_export_dialog_action">Export</string>
    <string name="main_import_dialog_title">Import data</string>
    <string name="main_import_dialog_action">Import</string>
    <string name="main_import_dialog_encryptions">Conversation definitions</string>
    <string name="cryptool" translatable="false">Cryptool</string>
    <string name="password_text" translatable="false">Password</string>
    <string name="icon" translatable="false">Icon</string>
    <string name="clear" translatable="false">Clear</string>
    <string name="test_text" translatable="false">This is a test text. This is an app widget description. This is an app widget description. This is an app widget description</string>
    <string name="encrypt_text" translatable="false">ENCRYPT</string>
    <string name="incorrect_password" translatable="false">Incorrect password! please try again!</string>
</resources>