<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.Cryptool.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/widget_shape"
    android:padding="0dp"
    android:orientation="vertical">

    <!--<LinearLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/app_widget_header_background"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_widget_header_background"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/widget_default_padding"
        android:paddingHorizontal="@dimen/widget_medium_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon"
            android:src="@drawable/cryptool_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/widget_white"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="24sp"
            android:text="@string/cryptool" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/widget_default_margin"
        android:layout_marginTop="@dimen/widget_small_margin"
        android:padding="1dp">

        <LinearLayout
            android:id="@+id/errorBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/widget_background_incorrect"
            android:orientation="horizontal"
            android:visibility="visible"
            android:padding="1dp"/>


        <LinearLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="1dp"
            android:background="@drawable/app_widget_text_view"
            android:orientation="horizontal"
            android:padding="@dimen/widget_default_padding">

            <ImageView
                android:id="@+id/passwordIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon"
                android:src="@drawable/password_text_icon" />

            <TextView
                android:id="@+id/passwordInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_default_margin"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/password_text" />

        </LinearLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/widget_error"
        android:layout_marginStart="@dimen/widget_default_margin"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="11sp"
        android:visibility="visible"
        android:text="@string/incorrect_password" />

    <LinearLayout
        android:id="@+id/messageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/widget_default_margin"
        android:layout_marginTop="@dimen/widget_small_margin"
        android:background="@drawable/app_widget_text_view"
        android:orientation="horizontal"
        android:padding="@dimen/widget_default_padding">

        <ImageView
            android:id="@+id/textIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/widget_default_margin"
            android:src="@drawable/message_icon" />

        <TextView
            android:id="@+id/textInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/test_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/widget_default_margin"
        android:layout_marginTop="@dimen/widget_default_margin"
        android:layout_marginBottom="@dimen/widget_medium_padding"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/actionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/widget_default_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/action_button_background"
            android:padding="@dimen/widget_default_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon"
                android:src="@drawable/decrypt_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/widget_white"
                android:layout_marginStart="@dimen/widget_default_margin"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:text="@string/encrypt_text" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/widget_default_margin"
            android:background="@drawable/clear_button"
            android:text="@string/clear">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/widget_large_margin"
                android:layout_marginVertical="@dimen/widget_default_margin"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:text="@string/clear" />

        </FrameLayout>
    </LinearLayout>
</LinearLayout>